@@ -69,11 +69,10 @@ class TestScriptIdentifyFunctions(test_utils.TestTempdirMixin, unittest.TestCase
 
 class TestScriptIdentify(scripts_utils.TestScriptsBase):
 
+    # FIXME: remove
+    def tearDown(self): pass
+
     def test_identify(self):
-        with test_utils.capture('stdout', 'stderr') as (stdout, stderr):
-            test_utils.run_with_args(identify.main,
-                                     [path.join(self.tempdir, 'test.import'),
-                                      path.join(self.tempdir, 'Downloads')])
         regexp = textwrap.dedent("""\
             \*\*\*\* .*/Downloads/ofxdownload.ofx
             Importer: +mybank-checking-ofx
@@ -86,8 +85,21 @@ class TestScriptIdentify(scripts_utils.TestScriptsBase):
             \*\*\*\* .*/Downloads/Subdir/readme.txt
 
             """).strip()
+
+        with test_utils.capture('stdout', 'stderr') as (stdout, stderr):
+            test_utils.run_with_args(identify.main,
+                                     [path.join(self.tempdir, 'test.import'),
+                                      path.join(self.tempdir, 'Downloads')])
         output = stdout.getvalue().strip()
         self.assertTrue(re.match(regexp, output))
+
+        with test_utils.capture('stdout', 'stderr') as (stdout, stderr):
+            output = subprocess.check_output(
+                [path.join(self.tempdir, 'testimport.py'),
+                 '--downloads', path.join(self.tempdir, 'Downloads'),
+                 'identify'], shell=False)
+        print(output)
+        self.assertTrue(re.match(regexp, output.decode().strip()))
 
     def test_identify_examples(self):
         example_dir = path.join(
