@@ -1,4 +1,4 @@
 #!/usr/bin/env python3
-__copyright__ = "Copyright (C) 2013-2017  Martin Blais"
+__copyright__ = "Copyright (C) 2013-2018  Martin Blais"
 __license__ = "GNU GPLv2"
-from beancount.ingest.file import main; main()
+from beancount.ingest.scripts_utils import ingest; ingest()
